Add Import/Export V0.2.2

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+spotGUI v0.2.2 (Release date: 2018-10-11)
+==============
+
+Changes:
+* Add Data import/export
+* Restructured Design
+
 spotGUI v0.2.0 (Release date: 2018-05-31)
 ==============
 
